Fixed some spacing and css

--- a/client/index.scss
+++ b/client/index.scss
@@ -13,16 +13,8 @@
     --font-weight-700: 700;
     --font-weight-900: 900;
 
-    --body-font-family: var(--font-family-main);
-    --body-font-weight: var(--font-weight-300);
     --body-line-height: 1.75;
     --body-letter-spacing: 0.02;
-
-    --headers-font-family: var(--font-family-highlight);
-    --headers-font-weight: var(--font-weight-700);
-
-    --headers-strong-font-family: var(--font-family-main);
-    --headers-strong-font-weight: var(--font-weight-900);
 
     --font-size-header-brand: 2rem;
 }
@@ -42,11 +34,11 @@ html, body {
 body {
     font-size: 1rem;
     text-align: center;
-    font-family: var(--body-font-family);
-    font-weight: var(--body-font-weight);
-    line-height: var(--body-line-height);
-    letter-spacing: var(--body-letter-spacing);
-    color: var(--clr-grey);
+    font-family: var(--font-family-main, "Roboto");
+    font-weight: var(--font-weight-300, 300);
+    line-height: var(--body-line-height, 1.75);
+    letter-spacing: var(--body-letter-spacing, 0.02);
+    color: var(--clr-grey, rgba(black, 0.7));
 }
 
 #root {
@@ -56,14 +48,14 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: var(--headers-font-family);
-    font-weight: var(--headers-font-weight);
+    font-family: var(--font-family-highlight, "Roboto Slab");
+    font-weight: var(--font-weight-700, 700);
 }
 
 .btn {
     $clr-main: #DCAF68;
-    background-color: var(--clr-main);
-    border-color: var(--clr-main);
+    background-color: $clr-main;
+    border-color: $clr-main;
     color: white;
     margin: 5px;
     &:hover {
